--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-$ cat .gitignore
+# built application files
+*.apk
+*.ap_
 
-# Ignore what we got under 'bin'
-bin/*
-gen/*
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
